--- a/SwipeIt/Base.lproj/Main.storyboard
+++ b/SwipeIt/Base.lproj/Main.storyboard
@@ -1,24 +1,88 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SwipeIt" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cbD-lf-y1p">
+                                <rect key="frame" x="20" y="308" width="374" height="74"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <connections>
+                                    <segue destination="sWF-sj-GQY" kind="embed" id="Wzn-9S-7Bz"/>
+                                </connections>
+                            </containerView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="605.79710144927537" y="103.79464285714285"/>
+        </scene>
+        <!--Swipe View Controller-->
+        <scene sceneID="jAs-xl-1Wh">
+            <objects>
+                <viewController id="sWF-sj-GQY" customClass="SwipeViewController" customModule="SwipeIt" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="6tt-lO-qPL">
+                        <rect key="frame" x="0.0" y="0.0" width="374" height="74"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YxE-Vt-JpH">
+                                <rect key="frame" x="0.0" y="0.0" width="374" height="74"/>
+                                <color key="backgroundColor" red="0.0" green="0.56284224989999998" blue="0.31881666180000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bwC-Ao-mBZ">
+                                <rect key="frame" x="4" y="4" width="66" height="66"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <gestureRecognizers/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="bwC-Ao-mBZ" secondAttribute="height" multiplier="1:1" id="8dX-Jd-c5P"/>
+                                </constraints>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="AYR-m6-Hvb" appends="YES" id="SNT-VF-7Bv"/>
+                                </connections>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="dyS-Km-9dM"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="YxE-Vt-JpH" secondAttribute="bottom" id="BCH-VR-hit"/>
+                            <constraint firstAttribute="trailing" secondItem="YxE-Vt-JpH" secondAttribute="trailing" id="EJZ-tm-u2N"/>
+                            <constraint firstItem="bwC-Ao-mBZ" firstAttribute="leading" secondItem="dyS-Km-9dM" secondAttribute="leading" constant="4" id="Oay-Xk-0NH"/>
+                            <constraint firstItem="bwC-Ao-mBZ" firstAttribute="centerY" secondItem="YxE-Vt-JpH" secondAttribute="centerY" id="R7Y-Ks-6eW"/>
+                            <constraint firstItem="YxE-Vt-JpH" firstAttribute="leading" secondItem="6tt-lO-qPL" secondAttribute="leading" id="iFp-ts-VTN"/>
+                            <constraint firstItem="dyS-Km-9dM" firstAttribute="trailing" secondItem="bwC-Ao-mBZ" secondAttribute="trailing" constant="304" id="iLB-jZ-dQT"/>
+                            <constraint firstItem="dyS-Km-9dM" firstAttribute="bottom" secondItem="bwC-Ao-mBZ" secondAttribute="bottom" constant="4" id="jIH-zg-acd"/>
+                            <constraint firstItem="YxE-Vt-JpH" firstAttribute="top" secondItem="6tt-lO-qPL" secondAttribute="top" id="uyR-8E-zar"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dXy-jO-S0q" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="AYR-m6-Hvb">
+                    <connections>
+                        <action selector="viewSwiped:" destination="sWF-sj-GQY" id="hpb-6a-cIL"/>
+                    </connections>
+                </panGestureRecognizer>
+            </objects>
+            <point key="canvasLocation" x="605.79710144927537" y="549.77678571428567"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
